--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 600px) {
     .container {
-        width: 100%;
+        width: calc(100% - 20px);
         padding: 10px;
         margin: 10px;
     }
